# cpp_github_actions_test

./: .clang-format  CMakeLists.txt  LICENSE  README copy.md  README.md
src/: main.cpp
tests/: CMakeLists.txt  template_tests.cpp
workflows/: windows.yml
